# llama_cpp_router

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.json  config.json  docker-compose.yaml  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: publish.yaml
src/: app_error.rs  cli.rs  event_source.rs  index.ts  main.rs  model.rs
src/config/: config.rs  context_size.rs  mod.rs
src/controllers/: chat_completions.rs  models.rs
src/repositories/: baseCliCommandRepository.ts  configRepository.ts  docker_repository.rs  ggufParserRepository.ts  llamaServerRepository.ts  mod.rs  rocmSmiRepository.ts  vram_repository.rs
src/server/: router.ts  server.ts
src/server/controllers/: ChatController.ts  ConfigController.ts  EmbeddingsController.ts  ModelFitsController.ts  ModelsController.ts
src/services/: backend_server.rs  backend_server_manager.rs  configService.ts  llamaProxyService.ts  mod.rs  modelFitService.ts  vram_estimator.rs
tests/server/: server.test.ts
