[package]
name = "llama_cpp_router"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.6", features = ["json"] }
bollard = "0.19.3"
clap = { version = "4.5.48", features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
reqwest = { version = "0.12.23", default-features = false, features = ["stream", "json", "rustls-tls-native-roots", "http2"] }
futures = "0.3.31"
regex = "1.12.1"
confy = { version = "1.0.0", default-features = false, features = ["yaml_conf"] }
